# atrope

./: Dockerfile  README.md  lint.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/linters/: .isort.cfg
.github/workflows/: lint.yml  python-test.yml
atrope/: __init__.py  cache.py  config.py  exception.py  image.py  importutils.py  opts.py  ovf.py  paths.py  smime.py  utils.py
atrope/cmd/: base.py  cli.py  commands.py  image_list.py  version.py
atrope/dispatcher/: glance.py  manager.py
atrope/image_list/: harbor.py  hepix.py  manager.py  source.py
atrope/tests/: base.py  test_atrope.py  test_oras.py
etc/: atrope.conf.sample  hepix.yaml.sample  sources.yaml.sample
